--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 ---
-<script src="https://cdn.bootcss.com/mathjax/2.7.6/MathJax.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/node-main.min.js"></script>
 {% if page.image and page.headerImage %}
     <img class="title-image" src="{{ page.image }}" alt="{{ page.title }}">
 {% endif %}
