--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,5 +23,7 @@
   {%- endif %}
   {%- if page.layout == "page" %}
   <link rel="stylesheet" href="{{site.baseurl}}/static/css/page.css?t={{buildAt}}">
+  <link rel="dns-prefetch" href="//cdn.bootcss.com" />
+
   {%- endif %}
 </head>
