--- a/_includes/script.html
+++ b/_includes/script.html
@@ -1,6 +1,26 @@
 {%- assign buildAt = site.time | date: "%Y%m%d%H%M%S" -%}
 <script>window.blog={baseurl:"{{site.baseurl}}", buildAt:"{{buildAt}}"}</script>
-<script src="https://cdn.bootcss.com/mathjax/2.7.7/MathJax.js"></script>
+<script src="//cdn.bootcss.com/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script type="text/x-mathjax-config">
+  var mathId = document.getElementById("post-container");//选择公式识别范围
+  MathJax.Hub.Config({
+      showProcessingMessages: false,//关闭js加载过程信息
+      messageStyle: "none",//不显示信息
+      extensions: ["tex2jax.js"],
+      jax: ["input/TeX", "output/HTML-CSS"],
+      tex2jax: {
+          inlineMath:  [ ["$", "$"] ],//行内公式选择符
+          displayMath: [ ["$$","$$"] ],//段内公式选择符
+          skipTags: ['script', 'noscript', 'style', 'textarea', 'pre','code','a'],//避开某些标签
+          ignoreClass:"comment-content" //避开含该Class的标签
+      },
+      "HTML-CSS": {
+          availableFonts: ["STIX","TeX"],//可选字体
+          showMathMenu: false //关闭右击菜单显示
+      }
+  });
+  MathJax.Hub.Queue(["Typeset",MathJax.Hub,mathId]);//选择公式识别范围
+  </script>
 <script type="text/javascript" src="{{site.baseurl}}/static/js/blog.js?t={{ buildAt }}"></script>
 {% if page.searchPage -%}
 <script type="text/javascript" src="{{site.baseurl}}/static/js/search.js?t={{ buildAt }}"></script>
