--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,10 +21,9 @@
   <link rel="stylesheet" href="{{site.baseurl}}/static/css/post.css?t={{buildAt}}">
   <link rel="stylesheet" href="{{site.baseurl}}/static/css/highlight.css?t={{buildAt}}">
   {%- endif %}
-  {%- if page.layout == "page" %}
+  <!-- {%- if page.layout == "page" %} -->
   <link rel="stylesheet" href="{{site.baseurl}}/static/css/page.css?t={{buildAt}}">
   <link rel="dns-prefetch" href="//cdn.bootcss.com" />
-  <!-- <script src="https://cdn.bootcdn.net/ajax/libs/mathjax/3.1.2/es5/a11y/assistive-mml.js"></script> -->
   <script crossorigin="anonymous" integrity="sha512-UKdJ5WKBiAE2woZuDoo7WbUEoEg899JFHi7RrqMaeOlpKn+fSgMFDEPToEjXlMy9phugWdAWARRqEStBoODDAg==" src="https://lib.baomitu.com/mathjax/3.1.2/es5/a11y/assistive-mml.js"></script>
   <script type="text/x-mathjax-config">
 var mathId = document.getElementsByClassName("post-container");//选择公式识别范围
@@ -46,5 +45,5 @@ MathJax.Hub.Config({
 });
 MathJax.Hub.Queue(["Typeset",MathJax.Hub,mathId]);//选择公式识别范围
 </script>
-  {%- endif %}
+  <!-- {%- endif %} -->
 </head>
